--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,26 +1,26 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "frontend/package.json",
-        "use": "@vercel/static-build",
-        "config": { "distDir": "build" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "build" }
+    },
+    {
+      "src": "backend/api/bfhl.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/bfhl",
+      "dest": "backend/api/bfhl.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "frontend/$1"
+    }
+  ]
+}
 
-      },
-      {
-        "src": "backend/server.js",
-        "use": "@vercel/node"
-      }
-      
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "backend/api/index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "frontend/$1"
-      }
-    ]
-  }
+
