--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,25 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
-    },
-    {
-      "src": "backend/api/bfhl.js",
+      "src": "backend/server.js", 
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/bfhl",
-      "dest": "backend/api/bfhl.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "frontend/$1"
+      "src": "/api/(.*)",
+      "dest": "backend/api/$1" 
     }
-  ]
+  ] 
 }
+
 
 
